--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -67,3 +67,60 @@
       color: #fff;
    }
 }
+.search {
+   background-repeat: no-repeat;
+   background-size: cover;
+   background-position: center;
+   min-height: 533px;
+   &__inner {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      padding-top: 155px;
+      padding-bottom: 100px;
+   }
+
+   &__inner-title {
+      font-size: 48px;
+      color: #fff;
+      margin-bottom: 38px;
+   }
+
+   &__inner-text {
+      font-size: 20px;
+      color: #fff;
+      margin-bottom: 55px;
+   }
+   .form {
+      max-width: 670px;
+      margin: 0 auto;
+      position: relative;
+   }
+   form {
+      width: 670px;
+   }
+   input {
+      border: none;
+      border-radius: 4px;
+      display: block;
+      width: 100%;
+      height: 56px;
+      font-size: 14px;
+      font-weight: 500;
+      padding-left: 25px;
+      padding-right: 60px;
+   }
+   button {
+      display: block;
+      border: none;
+      position: absolute;
+      background-color: transparent;
+      top: 0;
+      right: 16px;
+      bottom: 0;
+      &:focus {
+         outline: none;
+      }
+   }
+}
