added product-slider and product

--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -13,8 +13,33 @@ a {
    text-decoration: none;
    color: black;
 }
+li {
+   list-style: none;
+}
+button:focus {
+   outline: none;
+}
+.slider__item-star .jq-ry-container {
+   display: inline-block;
+   margin-right: 13px;
+}
+.product__item-star .jq-ry-container {
+   display: inline-block;
+   margin-right: 13px;
+}
 .container {
    max-width: 1200px;
    margin: 0 auto;
    padding: 0 15px;
+}
+.container-fluid {
+   max-width: 100%;
+   margin: 0 auto;
+   padding: 0 30px;
+}
+
+@media (max-width: 720px) {
+   .container-fluid {
+      padding: 0 15px;
+   }
 }
