--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -412,9 +412,55 @@
       width: 220px;
       height: 60px;
       border: none;
+      padding: 0;
       a {
          color: $product;
          font-size: 18px;
+         display: flex;
+         justify-content: center;
+         align-items: center;
+         width: 100%;
+         height: 100%;
       }
+   }
+}
+.tutorial {
+   padding: 65px 0 120px;
+   &__ttile {
+      font-size: 36px;
+      line-height: 60px;
+      color: $product;
+      font-weight: bold;
+      text-align: center;
+      margin-bottom: 50px;
+   }
+
+   &__inner {
+      display: flex;
+      justify-content: space-between;
+   }
+
+   &__inner-box {
+      max-width: 370px;
+      width: 100%;
+   }
+
+   &__inner-img {
+      min-height: 270px;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+   }
+
+   &__inner-text {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 15px 0 20px;
+      background-color: #f8f8f8;
+      font-size: 24px;
+      font-weight: bold;
+      line-height: 60px;
+      color: $product;
    }
 }
