--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -2,3 +2,49 @@ $green: #8bc34a;
 $red: #e74c3c;
 $bg: #263238;
 $product: #263238;
+
+@font-face {
+   font-family: "icomoon";
+   src: url("../fonts/icomoon.eot?z205jx");
+   src: url("../fonts/icomoon.eot?z205jx#iefix") format("embedded-opentype"),
+      url("../fonts/icomoon.ttf?z205jx") format("truetype"), url("fonts/icomoon.woff?z205jx") format("woff"),
+      url("../fonts/icomoon.svg?z205jx#icomoon") format("svg");
+   font-weight: normal;
+   font-style: normal;
+   font-display: block;
+}
+
+[class^="icon-"],
+[class*=" icon-"] {
+   /* use !important to prevent issues with browser extensions that change fonts */
+   font-family: "icomoon" !important;
+   speak: never;
+   font-style: normal;
+   font-weight: normal;
+   font-variant: normal;
+   text-transform: none;
+   line-height: 1;
+
+   /* Better Font Rendering =========== */
+   -webkit-font-smoothing: antialiased;
+   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-cart:before {
+   content: "\e93a";
+}
+.icon-phone:before {
+   content: "\e942";
+}
+.icon-location:before {
+   content: "\e947";
+}
+.icon-rocket:before {
+   content: "\e9a5";
+}
+.icon-power:before {
+   content: "\e9b5";
+}
+.icon-play3:before {
+   content: "\ea1c";
+}
