--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -433,8 +433,8 @@
       font-weight: bold;
       text-align: center;
       margin-bottom: 50px;
+      position: relative;
    }
-
    &__inner {
       display: flex;
       justify-content: space-between;
@@ -463,4 +463,170 @@
       line-height: 60px;
       color: $product;
    }
+}
+
+.footer {
+   background-color: $bg;
+   padding-top: 100px;
+   &__content {
+      padding-bottom: 90px;
+   }
+
+   &__inner {
+      display: flex;
+      justify-content: space-between;
+      .col-1 {
+         max-width: 300px;
+      }
+      .col-2 {
+         max-width: 265px;
+      }
+      .col-3 {
+         max-width: 235px;
+      }
+      .col-1 {
+         max-width: 235px;
+      }
+   }
+
+   &__col-title {
+      color: #fff;
+      font-weight: bold;
+      font-size: 22px;
+      margin-bottom: 38px;
+      padding-bottom: 22px;
+   }
+   &__col-title::after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 2px;
+      width: 51px;
+      height: 3px;
+      background-color: $green;
+   }
+
+   &__col-text {
+      color: #fff;
+      font-size: 15px;
+      color: #b7c3c8;
+      line-height: 24px;
+      margin-bottom: 35px;
+   }
+
+   &__col-info {
+      color: #fff;
+   }
+   &__col-loc {
+      color: #fff;
+      display: block;
+      font-size: 14px;
+      line-height: 24px;
+      margin-bottom: 20px;
+      &::before {
+         content: "\e947";
+         font-family: "icomoon";
+         color: $green;
+      }
+   }
+
+   &__col-tel {
+      color: #fff;
+      &::before {
+         content: "\e942";
+         font-family: "icomoon";
+         color: $green;
+      }
+   }
+
+   &__col-list {
+      color: #fff;
+   }
+
+   &__form {
+      position: relative;
+   }
+
+   &__form-title {
+   }
+
+   &__social-link {
+   }
+
+   &__copy {
+      border-top: 1px solid#424d53;
+   }
+
+   &__copy-text {
+      color: #b7c3c8;
+      text-align: center;
+      font-size: 15px;
+      line-height: 36px;
+      padding: 10px 0 15px;
+   }
+   &__col-loc {
+   }
+   .footer__col-list {
+      padding-left: 0;
+      li {
+         font-size: 15px;
+         line-height: 36px;
+         color: #b7c3c8;
+         &::before {
+            content: "\ea1c";
+            font-family: "icomoon";
+            color: $green;
+            margin-right: 10px;
+         }
+      }
+   }
+   input {
+      width: 257px;
+      height: 35px;
+      background-color: #2f3c43;
+      border: none;
+      padding-left: 12px;
+   }
+   button {
+      position: absolute;
+      height: 35px;
+      width: 35px;
+      border: none;
+      background-color: $green;
+      right: 0;
+      &::after {
+         content: "\e9a5";
+         font-family: "icomoon";
+         color: #fff;
+      }
+   }
+}
+.footer__col .footer__col-title {
+   position: relative;
+}
+.footer__social-link {
+   margin-bottom: 33px;
+   padding-left: 0;
+   display: flex;
+   li {
+      display: block;
+      & + li {
+         margin-left: 7px;
+      }
+   }
+   a {
+      display: block;
+      width: 28px;
+      height: 28px;
+      background-image: url("../img/css_sprites.png");
+   }
+}
+.link-twitter {
+   background: url("css_sprites.png") -84px -84px;
+}
+.link-youtube {
+}
+.link-pinterest {
+}
+.link-linkedin {
 }
